# bio2token

./: LICENSE.txt  README.md  pyproject.toml
configs/: data.yaml  model.yaml  test.yaml  test_pdb.yaml  train.yaml  trainer.yaml
scripts/: test.py  test_pdb.py  test_pdbs.py  train.py
src/bio2token/data/: collate_fn.py  dataset.py  nabladft.py  prot_dataset.py
src/bio2token/data/utils/: molecule_conventions.py  tokens.py  utils.py
src/bio2token/layers/: fsq.py  mamba.py
src/bio2token/losses/: inter_atom_distance.py  loss.py  rmsd.py  tm.py
src/bio2token/models/: autoencoder.py  decoder.py  encoder.py
src/bio2token/utils/: callbacks.py  configs.py  lightning.py  mlflow.py  registration.py
